@@ -1,5 +1,12 @@
 2008-10-03  Richard Hult  <richard@imendio.com>
 
+	Bug 417692 – Deprecated functions are displayed in grey
+
+	* src/dh-search.c: Use getters for link members, and use italic
+	instead of insensitive fg colro for deprecated keywords.
+
+2008-10-03  Richard Hult  <richard@imendio.com>
+
 	* src/dh-base.c: (book_sort_func): Use getters for link name.
 
 2008-10-03  Richard Hult  <richard@imendio.com>
